# diesel-clickhouse

./: AUDIT_REPORT.md  CLAUDE.md  CORE_MACRO_AUDIT.md  Cargo.toml  GETTING_STARTED.md  MACRO_AUDIT.md  PERFORMANCE.md  PERFORMANCE_AUDIT.md  PERFORMANCE_AUDIT_2026.md  PERFORMANCE_AUDIT_RESULTS.md  PERFORMANCE_AUDIT_TEMPLATE.md  README.md  audit_prompt.md  audit_v2.md  docker-compose.yml  json_removal.md  propals  res.md  todo
.claude/commands/: audit-global.md  performance-optimization.md
benches/: block_construction.rs
diesel-clickhouse/: Cargo.toml
diesel-clickhouse-cli/: Cargo.toml
diesel-clickhouse-cli/src/: config.rs  connection.rs  main.rs
diesel-clickhouse-core/: Cargo.toml
diesel-clickhouse-core/src/: arena.rs  backend.rs  connection.rs  deserialize.rs  escape.rs  field_type.rs  interner.rs  lib.rs  result.rs  row.rs  serialize.rs  sql_builder.rs  test_utils.rs  type_parser.rs
diesel-clickhouse-core/src/expression/: case.rs  functions.rs  methods.rs  mod.rs  operators.rs  subquery.rs  window.rs
diesel-clickhouse-core/src/expression/case/: if_expr.rs  mod.rs  searched.rs  simple.rs
diesel-clickhouse-core/src/expression/window/: aggregates.rs  frame.rs  functions.rs  mod.rs  over.rs
diesel-clickhouse-core/src/query_builder/: ast_pass.rs  clickhouse.rs  delete.rs  insert.rs  mod.rs  modifiers.rs  select.rs  set_operations.rs  update.rs  with.rs
diesel-clickhouse-core/src/query_dsl/: mod.rs
diesel-clickhouse-core/src/query_source/: column.rs  joins.rs  mod.rs  table.rs
diesel-clickhouse-core/tests/: core_tests.rs
diesel-clickhouse-derive/: Cargo.toml
diesel-clickhouse-derive/src/: chrono_detect.rs  lib.rs  table.rs
diesel-clickhouse-migrations/: Cargo.toml
diesel-clickhouse-migrations/src/: error.rs  harness.rs  lib.rs  migration.rs  source.rs  table.rs
diesel-clickhouse-migrations/tests/: migrations_tests.rs
diesel-clickhouse-types/: Cargo.toml
diesel-clickhouse-types/src/: complex.rs  floats.rs  integers.rs  lib.rs  nullable.rs  strings.rs  temporal.rs
diesel-clickhouse-types/tests/: types_tests.rs
diesel-clickhouse/src/: arrow.rs  async_insert.rs  batch.rs  common.rs  http.rs  lib.rs  metrics.rs  native.rs  native_arrow.rs  parallel.rs  pool.rs  prepared.rs  row.rs  run_query_dsl.rs  serde_helpers.rs  stream.rs  unified.rs  unified_row.rs  zero_copy.rs
diesel-clickhouse/src/http/: builder.rs  mod.rs  sql.rs
diesel-clickhouse/src/native/: block.rs  builder.rs  column.rs  mod.rs
diesel-clickhouse/tests/: advanced_features_tests.rs  integration_tests.rs  testcontainers_tests.rs
diesel-clickhouse/tests/test_support/: containers.rs  mod.rs
docs/: BACKENDS.md
examples/: advanced_queries.rs  arena_allocation.rs  async_inserts.rs  basic_queries.rs  batch_inserts.rs  complex_types.rs  connection_pooling.rs  getting_started.rs  metrics_observability.rs  migrations.rs  migrations_example.rs  native_test.rs  parallel_processing.rs  prepared_cache.rs  query_builder.rs  unified_connection.rs  zero_copy_parsing.rs
examples/migrations/20240101000000_create_users/: up.sql
examples/migrations/20240102000000_create_posts/: up.sql
examples/migrations/20240103000000_add_user_status/: down.sql  up.sql
examples/sample_migrations/20240101000000_create_events/: down.sql  up.sql
examples/sample_migrations/20240102000000_create_users/: up.sql
examples/test_migrations/20240101000000_create_test_table/: up.sql
src/: lib.rs
