[package]
name = "diesel-clickhouse-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for diesel-clickhouse migrations"
keywords = ["clickhouse", "migrations", "cli", "database"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "diesel-clickhouse"
path = "src/main.rs"

[dependencies]
diesel-clickhouse = { workspace = true, features = ["http", "native", "migrations"] }
url = "2"
diesel-clickhouse-migrations.workspace = true

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }

# CLI parsing
clap = { version = "4", features = ["derive", "env"] }

# Error handling
thiserror.workspace = true
anyhow = "1"

# Configuration
toml = "1"
serde.workspace = true

# Colored output
colored = "3"

# Date/time
chrono.workspace = true

# Environment variables
dotenvy = "0.15"
