[package]
name = "diesel-clickhouse-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits and types for diesel-clickhouse"
keywords = ["clickhouse", "orm", "database", "sql"]
categories = ["database"]

[features]
default = ["chrono"]
chrono = ["diesel-clickhouse-types/chrono", "dep:chrono"]
time = ["diesel-clickhouse-types/time"]
uuid = ["diesel-clickhouse-types/uuid", "dep:uuid"]
json = ["diesel-clickhouse-types/json", "dep:serde_json"]

[dependencies]
diesel-clickhouse-types.workspace = true
serde_json = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
itoa.workspace = true
ryu.workspace = true
smallvec.workspace = true
compact_str.workspace = true
bumpalo.workspace = true
lasso.workspace = true
ahash.workspace = true
memchr.workspace = true
