[package]
name = "diesel-clickhouse-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for diesel-clickhouse"
keywords = ["clickhouse", "derive", "macros", "orm"]
categories = ["database"]

[lib]
proc-macro = true

[features]
http = []
native = []

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
