[package]
name = "diesel-clickhouse"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["http", "chrono"]

# Backends
http = ["dep:clickhouse"]

# For integration tests
integration = []

# DateTime handling
chrono = ["diesel-clickhouse-core/chrono", "dep:chrono"]
time = ["diesel-clickhouse-core/time"]

# UUID support
uuid = ["diesel-clickhouse-core/uuid", "dep:uuid"]

# Connection pool
pool = ["dep:deadpool"]

# TLS
native-tls = ["clickhouse?/native-tls"]
rustls-tls = ["clickhouse?/rustls-tls"]

# Tracing
tracing = ["dep:tracing"]

[dependencies]
diesel-clickhouse-core.workspace = true
diesel-clickhouse-types.workspace = true
diesel-clickhouse-derive.workspace = true

tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true

# Optional
clickhouse = { workspace = true, optional = true, features = ["time"] }
chrono = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
deadpool = { version = "0.10", optional = true }
tracing = { version = "0.1", optional = true }
url = "2"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.11", features = ["blocking"] }
diesel-clickhouse-migrations = { path = "../diesel-clickhouse-migrations" }
